# LeLabyrinthe

./: .gitignore  Affichagecomptagetresor.c  CMakeLists.txt  README.md  Schéma plateau de jeu.xlsx  header.c  header.h  idees_projet.md  idees_projet.txt  main.c  schéma plateau de jeu.docx
src/Menu/: color.c  consulter_sauvegardes.c  credits-regles.c  cursor.c  menu_ingame.c  menu_principal.c
src/NouvellePartie/: afficher_plateau.c  coulissage_tuiles.c  creer_partie.c  deplacement_joueur.c  init_plateau.c  notice_joueurs.c  options_joueur.c  victoire.c
src/Testing/: afficher_tab_struct_joueurs.c
